--- a/w6/joke-project/templates/style.css
+++ b/w6/joke-project/templates/style.css
@@ -50,7 +50,7 @@ main {
   width: 1000px;
   margin: auto;
   box-shadow: -1000px 0 0 #f7f7f7, 1000px 0 0 #f7f7f7;
-  padding-top: 20px;
+  padding: 30px;
 }
 
 footer {
@@ -60,6 +60,10 @@ footer {
   text-align: center;
   color: blue;
   font-weight: bold;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%; 
 }
 
 p {
